added separate service and html  file for external

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body ng-app="myModule">
   <h1>Lab 15</h1>
 <!-- This is our navigation. This will always be on the screen.-->
-  <a href='#/display'>DISPLAY</a> | <a href='#/form'>FORM</a>
+  <a href='#/display'>DISPLAY</a> | <a href='#/form'>FORM</a> | <a href='#/external'>EXTERNAL</a>
   <ng-view></ng-view>
 
   <script src="https://code.angularjs.org/1.5.3/angular.min.js"></script>
@@ -18,5 +18,6 @@
   <script src='exterService.js'></script>
   <script src="displayController.js"></script>
   <script src="formController.js"></script>
+  <script src="externalController.js"></script>
 </body>
 </html>
